--- a/templates/clubs/team_create_view.html
+++ b/templates/clubs/team_create_view.html
@@ -1,8 +1,9 @@
 {% extends '_base.html' %}
+{% load static %}
 {% block content%}
 
 <h1>Create a new  Team </h1>
-<form   method='post'>
+<form   method='post' enctype="multipart/form-data">
     {% csrf_token %}
     {{form.as_p}}
   
