--- a/templates/clubs/team_delete_view.html
+++ b/templates/clubs/team_delete_view.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 {% block content%}
-
-<form   method='post'>
+{% load static %}
+<form   method='post' enctype="multipart/form-data">
     {% csrf_token %}
     <h1>are you sure you want to delete {{team.team_name}} ?  </h1>
  
