--- a/templates/clubs/team_update_view.html
+++ b/templates/clubs/team_update_view.html
@@ -1,8 +1,8 @@
 {% extends '_base.html' %}
 {% block content%}
-
+{% load static %}
 <h1>Update  {{team.team_name}} </h1>
-<form   method='post'>
+<form   method='post' enctype="multipart/form-data">
     {% csrf_token %}
     {{form.as_p}}
     <input type='submit' />
